atualizando pag produtos

--- a/views/produtos.html
+++ b/views/produtos.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div id="topo" class="icon">
-            <a href="#" title="logo"><img src="../../public/images/logo.svg" alt=""></a>
+            <a href="#" title="logo"><img src="../public/images/logo.svg" alt=""></a>
         </div>
 
         <div class="search">
@@ -57,19 +57,19 @@
 
     <main>
         <section id="produto" class="produto">
-            <h1>Notebook Acer</h1>
+            <h1>Notebook Asus</h1>
             <div class="div-topo">
                 <div class="galeria-prod">
                     <div class="galeria-agrupada">
-                        <img src="../public/images/notebook.png" alt="Notebook" alt="">
-                        <img src="../public/images/notebook.png" alt="Notebook" alt="">
-                        <img src="../public/images/notebook.png" alt="Notebook" alt="">
+                        <img src="../public/images/notebook.jpg" alt="Notebook" alt="">
+                        <img src="../public/images/notebook.jpg" alt="Notebook" alt="">
+                        <img src="../public/images/notebook.jpg" alt="Notebook" alt="">
                     </div>
-                    <img class="img-destaque" src="../public/images/notebook.png" alt="Notebook" alt="">
+                    <img class="img-destaque" src="../public/images/notebook.jpg" alt="Notebook" alt="">
                 </div>
 
                 <div class="produto-main">
-                    <h2>Notebook Acer</h2>
+                    <h2>Notebook Asus</h2>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
                     <i class="fa-solid fa-star"></i>
@@ -104,15 +104,15 @@
             </div>
             <div class="relacionados-img">
                 <div>
-                    <img src="../public/images/notebook.png" alt="Notebook">
+                    <img src="../public/images/notebook.jpg" alt="Notebook">
                 </div>
     
                 <div>
-                    <img src="../public/images/smartphone.png" alt="">
+                    <img src="../public/images/GAMER.png" alt="">
                 </div>
     
                 <div>
-                    <img src="../public/images/hometheater.png" alt="">
+                    <img src="../public/images/CELULAR-SMARTPHONE_1645045581.png" alt="">
                 </div>
             </div>
         </section>
