--- a/views/login.html
+++ b/views/login.html
@@ -63,7 +63,7 @@
                 </div>
 
                 <div class="wrapper">
-                    <label for="senha">senha</label>
+                    <label for="senha">Senha</label>
                     <input type="password" name="senha" id="">
                 </div>
 
