--- a/public/css/login.css
+++ b/public/css/login.css
@@ -29,15 +29,16 @@ main h1 {
 .wrapper {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
     gap: 3rem;
 
     margin-top: 2rem;
 }
 
 .wrapper label {
+    display: flex;
+    justify-content: start;
     font-size: 2.3rem;
-    gap: 1rem
 }
 
 .wrapper input {
