--- a/public/css/login.css
+++ b/public/css/login.css
@@ -60,8 +60,11 @@ form {
 
 .wrapper input {
     width: 90%;
-    height: 2.4rem;
+    height: 2.7rem;
     padding: 1rem;
+
+    font-weight: 300;
+    font-size: 2rem;
 }
 
 .button-wrapper {
