--- a/public/css/produtos.css
+++ b/public/css/produtos.css
@@ -24,9 +24,9 @@ main {
 
 .produto h1 {
     color: #FFFFFF;
-    font-size: 40px;
-    margin-top: 45px;
-    margin-left: 120px;
+    font-size: 4.0rem;
+    margin-top: 4.4rem;
+    margin-left: 20rem;
     text-align: justify;
 }
 
@@ -48,6 +48,8 @@ main {
     margin-right: 10px;
     margin-left: 50px;
     padding-left: 20px;
+
+    border-radius: .5rem;
 }
 
 .galeria-agrupada {
@@ -73,6 +75,7 @@ main {
    color: #3f3f3f;
    border: 1px solid #DDDDDD;
    padding: 10px;
+   border-radius: .5rem;
 }
 
 .produto-main h3 {
@@ -97,6 +100,7 @@ main {
     background-color: #FFFFFF;
     border: 1px solid #DDDDDD;
     margin-right: 80px;
+    border-radius: .5rem;
 }
 
 
@@ -122,7 +126,7 @@ main {
     width: 200px;
     height: 200px;
     background-color: #FFFFFF;
-    border-radius: 50%;
+    border-radius: .5rem;
     padding: 40px;
 }
 
@@ -136,6 +140,8 @@ main {
     flex-direction: column;
     background-color: #FFFFFF;
     border: 1px solid #DDDDDD;
+
+    border-radius: .5rem;
 
     font-size: 2.2rem;
 }
@@ -165,6 +171,8 @@ main {
     flex-direction: column;
     background-color: #FFFFFF;
     border: 1px solid #DDDDDD;
+
+    border-radius: .5rem;
 
     font-size: 2.2rem;
 }
