--- a/views/index.html
+++ b/views/index.html
@@ -16,24 +16,28 @@
 
     <header>
         <div class="icon">
-            <a href="#" title="logo"><img src="../public/images/logo.svg" alt=""></a>
+            <a href="#" title="logo"><img src="../../public/images/logo.svg" alt=""></a>
         </div>
 
         <div class="search">
             <form action="">
-                <input type="search" name="search" id="search" placeholder="Pesquisar" minlength="10">
-                <a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                <input type="search" name="search" id="search" placeholder="Pesquisar">
+                <button name="btn-1" id="btn">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                </button>
         </div>
         </form>
 
         <div class="cart-user">
 
             <div class="cart">
+                <!-- VAI TER QUE ENTRAR UM BTN -->
                 <i class="fa-solid fa-cart-shopping"></i>
                 <span>Meu Carrinho de Muambas</span>
             </div>
 
             <div class="user">
+                <!-- VAI TER QUE ENTRAR UM BTN -->
                 <i class="fa-solid fa-circle-user"></i>
                 <span>Login</span>
             </div>
