--- a/views/produtos.html
+++ b/views/produtos.html
@@ -103,16 +103,19 @@
                 <h2>Produtos Relacionados</h2>
             </div>
             <div class="relacionados-img">
-                <div>
+                <div class="card">
                     <img src="../public/images/notebook.jpg" alt="Notebook">
+                    <button id="#">Ver Mais</button>
                 </div>
     
-                <div>
+                <div class="card">
                     <img src="../public/images/GAMER.png" alt="">
+                    <button id="#">Ver Mais</button>
                 </div>
     
-                <div>
+                <div class="card">
                     <img src="../public/images/CELULAR-SMARTPHONE_1645045581.png" alt="">
+                    <button id="#">Ver Mais</button>
                 </div>
             </div>
         </section>
