--- a/public/css/produtos.css
+++ b/public/css/produtos.css
@@ -49,7 +49,7 @@ main {
     margin-left: 50px;
     padding-left: 20px;
 
-    border-radius: .5rem;
+    border-radius: .5rem;  
 }
 
 .galeria-agrupada {
@@ -112,6 +112,47 @@ main {
     align-items: center;
 
     font-size: 2.2rem;
+}
+
+.card {
+    background-color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    transition: 0.5s;
+    border-radius: .5rem;
+
+    height: 25rem;
+}
+
+.card:hover {
+    height:24rem;
+}
+
+.card img {
+    max-width: 20rem;
+}
+
+.card button {
+    background-color: #59BCE1;
+    width: 100%;
+    padding: 1.3rem;
+    border: none;
+    border-radius: 0  0 .5rem .5rem;
+    cursor: pointer;
+
+    color: #FFFFFF;
+
+    font-size: 2rem;
+}
+
+.card button:hover {
+    background-color: #0384B3;
+
+}
+
+.produtos-relacionados h2 {
+    color: #FFFFFF;
 }
 
 .relacionados-img {
