--- a/public/css/produtos.css
+++ b/public/css/produtos.css
@@ -131,6 +131,9 @@ main {
 
 .card img {
     max-width: 20rem;
+    max-height: 20rem;
+    min-width: 20rem;
+    min-height: 20rem;
 }
 
 .card button {
