--- a/public/css/carrinho.css
+++ b/public/css/carrinho.css
@@ -21,11 +21,14 @@ h1 {
   margin-top: 4.5rem;
   margin-left: 12rem;
   text-align: justify;
+  text-shadow: black 0.5rem 0.5rem 1rem;
 }
 
 .container {
   background-color: #FFFFFF;
   margin-inline: 7rem;
+  margin-bottom: 5rem;
+  padding-bottom: 4rem;
 }
 
 .wrapper {
@@ -45,13 +48,19 @@ h1 {
   gap: 7rem;
 }
 
-.container img {
+/* .container img {
   height: auto;
-}
+} */
 
 .descricao-produto {
   width: 30rem;
   font-size: 1.8rem;
+}
+
+.descricao-produto form {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 
 .descricao-produto h2 {
@@ -59,17 +68,28 @@ h1 {
 }
 
 .descricao-produto label {
-  margin-right: 1rem;
+  font-size: 2.7rem;
+}
+
+.descricao-produto input {
+  height: 2.7rem;
 }
 
 .descricao-produto button {
-  margin-left: 1rem;
+  background-color: #59BCE1;
+  padding: 0.3rem;
+  border: none;
+  border-radius: .5rem .5rem;
+  cursor: pointer;
+  text-shadow: black 0.5rem 0.5rem 1rem;
+  color: #FFFFFF;
+
+  font-size: 1.4rem;
 }
 
 .preco {
   padding-right: 5rem;
   text-align: end;
-  
 }
 
 .preco h2 {
@@ -91,12 +111,152 @@ h1 {
   align-items: center;
 }
 
+.calcule-frete {
+  padding-right: 5rem;
+  text-align: end;
+}
+
+.calcule-frete p {
+  font-size: 4rem;
+}
+
+.calcule-frete button {
+  background-color: #59BCE1;
+  padding: 0.3rem;
+  border: none;
+  border-radius: .5rem .5rem;
+  cursor: pointer;
+  text-shadow: black 0.5rem 0.5rem 1rem;
+  color: #FFFFFF;
+
+  font-size: 2rem;
+}
+
+.calcule-frete input {
+  height: 3.5rem;
+  margin-right: 1rem;
+}
+
 .pagamento h2 {
     color: #FFFFFF;
     font-size: 4rem;
     margin-top: 4.5rem;
     margin-left: 12rem;
     text-align: justify;
+    text-shadow: black 0.5rem 0.5rem 1rem;
+}
+
+.container h3 {
+  font-size: 3.5rem;
+  color: black;
+  text-shadow: none;
+  padding-top: 4rem;
+}
+
+.pagamento .container {
+  padding-left: 5rem;
+
+}
+
+.formas-pgto {
+  font-size: 3rem;
+  padding-top: 4rem;
+  padding-left: 5rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem
+}
+
+.entrega h2 {
+  color: #FFFFFF;
+  font-size: 4rem;
+  margin-top: 4.5rem;
+  margin-left: 12rem;
+  text-align: justify;
+  text-shadow: black 0.5rem 0.5rem 1rem;
+}
+
+.forma-entrega {
+  font-size: 3rem;
+  padding-top: 4rem;
+  padding-left: 10rem;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+
+.produtos-relacionados {
+  margin-top: 4.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 4rem;
+
+  font-size: 2.2rem;
+
+}
+
+.produtos-relacionados h2 {
+  color: #FFFFFF;
+  text-shadow: black 0.5rem 0.5rem 1rem;
+}
+
+.relacionados-img {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 16rem;
+}
+
+.produtos-relacionados div img {
+  width: 20rem;
+  height: 20rem;
+  background-color: #FFFFFF;
+  border-radius: .5rem;
+  padding: 4rem;
+}
+
+
+.card {
+  background-color: #FFFFFF;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  transition: 0.3s;
+  border-radius: .5rem;
+
+  height: 25rem;
+}
+
+.card:hover {
+  height:24rem;
+}
+
+.card img {
+  max-width: 20rem;
+  max-height: 20rem;
+  min-width: 20rem;
+  min-height: 20rem;
+}
+
+.card button {
+  background-color: #59BCE1;
+  width: 100%;
+  padding: 1.3rem;
+  border: none;
+  border-radius: 0  0 .5rem .5rem;
+  cursor: pointer;
+  text-shadow: black 0.5rem 0.5rem 1rem;
+  color: #FFFFFF;
+
+  font-size: 2rem;
+}
+
+.card button:hover {
+  background-color: #0384B3;
+
 }
 
 
