--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -20,9 +20,10 @@ body{
     border-radius: .8rem;
 
 }
-.container h1{
+/* .container h1{
  
-}
+} */
+
 footer {
     width: 100%;
     height: 20vh;
