--- a/views/home/carrinho.ejs
+++ b/views/home/carrinho.ejs
@@ -1,64 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/css/header.css">
-    <link rel="stylesheet" href="../public/css/carrinho.css">
-    <link rel="shortcut icon" href="../public/images/logo-header.svg" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/86e4e92605.js" crossorigin="anonymous"></script>
-  <title>Carrinho de Muambas</title>
-</head>
-<body>
-  <header>
-    <div class="icon">
-        <a href="#" title="logo"><img src="../../public/images/logo.svg" alt=""></a>
-    </div>
-
-    <div class="search">
-        <form action="">
-            <input type="search" name="search" id="search" placeholder="Pesquisar">
-            <button name="btn-1" id="btn">
-                <i class="fa-solid fa-magnifying-glass"></i>
-            </button>
-    </div>
-    </form>
-
-    <div class="cart-user">
-
-        <div class="cart">
-            <!-- VAI TER QUE ENTRAR UM BTN -->
-            <i class="fa-solid fa-cart-shopping"></i>
-            <span>Meu Carrinho de Muambas</span>
-        </div>
-
-        <div class="user">
-            <!-- VAI TER QUE ENTRAR UM BTN -->
-            <i class="fa-solid fa-circle-user"></i>
-            <span>Login</span>
-        </div>
-    </div>
-
-</header>
-<nav>
-  <ul>
-      <li><a href="">Todos</a></li>
-      <li><a href="">Promoções</a></li>
-      <li><a href="">Para você</a></li>
-      <li><a href="">Computadores</a></li>
-      <li><a href="">Celulares/Tablets</a></li>
-      <li><a href="">Televisores</a></li>
-      <li><a href="">Acessórios</a></li>
-  </ul>
-</nav>
+    <link rel="stylesheet" href="css/carrinho.css">
+    <title>Carrinho</title>
+    <%- include('../partials/header') %> 
 <main>
   <h1>Carrinho de Muambas</h1>
   <section class='container'>
     <div class="wrapper">
       <div class="produto-selecionado">
-        <img src="../public/images/notebook.jpg" alt="Notebook Asus">
+        <img src="images/notebook.jpg" alt="Notebook Asus">
       <div class="descricao-produto">
         <h2>Notebook Asus</h2>
         <form action="">
@@ -76,7 +24,7 @@
     </div>
     <div class="wrapper">
       <div class="produto-selecionado">
-        <img src="../public/images/monitor.jpg" alt="Monitor muitas polegadas">
+        <img src="images/monitor.jpg" alt="Monitor muitas polegadas">
       <div class="descricao-produto">
         <h2>Monitor muitas polegadas</h2>
         <form action="">
@@ -152,17 +100,17 @@
     </div>
     <div class="relacionados-img">
         <div class="card">
-            <img src="../public/images/notebook.jpg" alt="Notebook">
+            <img src="images/notebook.jpg" alt="Notebook">
             <button id="#">Ver Mais</button>
         </div>
 
         <div class="card">
-            <img src="../public/images/GAMER.png" alt="">
+            <img src="images/GAMER.png" alt="">
             <button id="#">Ver Mais</button>
         </div>
 
         <div class="card">
-            <img src="../public/images/CELULAR-SMARTPHONE_1645045581.png" alt="">
+            <img src="images/CELULAR-SMARTPHONE_1645045581.png" alt="">
             <button id="#">Ver Mais</button>
         </div>
     </div>
