--- a/views/home/categorias.ejs
+++ b/views/home/categorias.ejs
@@ -1,67 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/css/header.css">
-    <link rel="stylesheet" href="../public/css/categorias.css">
-    <link rel="shortcut icon" href="../public/images/logo-header.svg" type="image/x-icon">
-    <script src="https://kit.fontawesome.com/86e4e92605.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/categorias.css">
     <title>Categorias</title>
-</head>
-
-<body>
-    <header>
-        <div class="icon">
-            <a href="#" title="logo"><img src="../../public/images/logo.svg" alt=""></a>
-        </div>
-
-        <div class="search">
-            <form action="">
-                <input type="search" name="search" id="search" placeholder="Pesquisar">
-                <button name="btn-1" id="btn">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </button>
-        </div>
-        </form>
-
-        <div class="cart-user">
-
-            <div class="cart">
-                <!-- VAI TER QUE ENTRAR UM BTN -->
-                <i class="fa-solid fa-cart-shopping"></i>
-                <span>Meu Carrinho de Muambas</span>
-            </div>
-
-            <div class="user">
-                <!-- VAI TER QUE ENTRAR UM BTN -->
-                <i class="fa-solid fa-circle-user"></i>
-                <span>Login</span>
-            </div>
-        </div>
-
-    </header>
-    <nav>
-        <ul>
-            <li><a href="">Todos</a></li>
-            <li><a href="">Promoções</a></li>
-            <li><a href="">Para você</a></li>
-            <li><a href="">Computadores</a></li>
-            <li><a href="">Celulares/Tablets</a></li>
-            <li><a href="">Televisores</a></li>
-            <li><a href="">Acessórios</a></li>
-        </ul>
-    </nav>
-
+    <%- include('../partials/header') %> 
     <main>
         <h1>Resultado</h1>
         <section class="categorias">
 
             <div class="card">
                 <div class="card-image">
-                    <img src="../public/images/exemplo.jpg" alt="">
+                    <img src="images/exemplo.jpg" alt="">
                 </div>
                 <div class="card-title">
                     <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
@@ -76,7 +22,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="../public/images/exemplo.jpg" alt="">
+                    <img src="images/exemplo.jpg" alt="">
                 </div>
                 <div class="card-title">
                     <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
@@ -91,7 +37,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="../public/images/exemplo.jpg" alt="">
+                    <img src="images/exemplo.jpg" alt="">
                 </div>
                 <div class="card-title">
                     <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
@@ -106,7 +52,7 @@
 
             <div class="card">
                 <div class="card-image">
-                    <img src="../public/images/exemplo.jpg" alt="">
+                    <img src="images/exemplo.jpg" alt="">
                 </div>
                 <div class="card-title">
                     <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
