--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,16 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../../public/css/header.css">
-    <link rel="shortcut icon" href="../../public/images/logo-header.svg" type="image/x-icon">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="shortcut icon" href="images/logo-header.svg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/86e4e92605.js" crossorigin="anonymous"></script>
-    <title>Muambas.net</title>
 </head>
 
 <body>
     <header>
         <div class="icon">
-            <a href="#" title="logo"><img src="../../public/images/logo.svg" alt=""></a>
+            <a href="#" title="logo"><img src="images/logo.svg" alt=""></a>
         </div>
 
         <div class="search">
