subindo página de cadastro

--- a/views/home/cadastro.ejs
+++ b/views/home/cadastro.ejs
@@ -1,15 +1,32 @@
 
     <link rel="stylesheet" href="css/cadastro.css">
+   
     <title>Cadastro</title>
-    <%- include('../partials/header') %> 
-
- 
-  <div class="container">
-    <h1>Cadastre-se</h1>
-  </div>
-  
    
 
+ <body>
+  <section>
+    <div class="container">
+      <h1>Cadastra-se</h1>
+      <form action="">
+        <input type="email" name="user" id="" placeholder="Email">
+        <input type="password" name="password" id="" placeholder="Crie sua senha">
+        <input type="password" name="password" id="" placeholder="Confirme sua senha">
+        <input type="text" name="CPF" id="" placeholder="CPF">
+        <input type="text" name="CEP" id="" placeholder="CEP">
+      </form>
+      <div class="buttons">
+        <button type="submit">Cadastrar</button>
+  
+        <a href="./login" class="submit-button"  type="submit">Entrar</a>
+        
+
+      </div>
+        
+    </div>
+
+
+  </section>
 
 </body>
 
