--- a/views/partials/headerLogado.ejs
+++ b/views/partials/headerLogado.ejs
@@ -13,7 +13,7 @@
 <body>
     <header>
         <div class="icon">
-            <a href="#" title="logo"><img src="images/logo.svg" alt=""></a>
+            <a href="/" title="logo"><img src="images/logo.svg" alt=""></a>
         </div>
 
         <div class="search">
