página de categorias

--- a/views/home/categorias.ejs
+++ b/views/home/categorias.ejs
@@ -1,73 +1,108 @@
-    <link rel="stylesheet" href="css/categorias.css">
-    <title>Categorias</title>
-    <%- include('../partials/header') %> 
+<link rel="stylesheet" href="css/categorias.css">
+<title>Categorias</title>
+<%- include('../partials/header') %>
     <main>
         <h1>Resultado</h1>
         <section class="categorias">
 
-            <div class="card">
-                <div class="card-image">
-                    <img src="images/exemplo.jpg" alt="">
-                </div>
-                <div class="card-title">
-                    <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
-                </div>
-                <div class="card-price">
-                    <strong>R$ 360,00 </strong> <s>R$550,00</s>
-                </div>
-                <div class="card-conditions">
-                    <p>à vista ou em até 12x de R$ 31,62 sem juros </p>
+            <div class="notebooks">
+                <div class="card">
+                    <img src="images/tv.jpg" width="150" height="130" alt="">
+
+                    <p>Televisores<br>
+
+                    </p>
+
                 </div>
             </div>
 
             <div class="card">
-                <div class="card-image">
-                    <img src="images/exemplo.jpg" alt="">
-                </div>
-                <div class="card-title">
-                    <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
-                </div>
-                <div class="card-price">
-                    <strong>R$ 360,00 </strong> <s>R$550,00</s>
-                </div>
-                <div class="card-conditions">
-                    <p>à vista ou em até 12x de R$ 31,62 sem juros </p>
+                <img src="images/microfone.jpg" width="150" height="130" alt="">
+
+                <p> Acessórios <br>
+                </p>
+
+            </div>
+            </div>
+
+            <div class="card">
+                <img src="images/CADEIRAS.png" width="150" height="130" alt="">
+
+                <p> Cadeiras Gamer <br>
+                </p>
+
+            </div>
+            </div>
+
+            <div class="card">
+                <img src="images/CONECTIVIDADE.png" width="150" height="130" alt="">
+
+                <p> Conectividades <br>
+                </p>
+
+            </div>
+            </div>
+
+            <div class="card">
+                <img src="images/COMPUTADORES.png" width="150" height="130" alt="">
+
+                <p> Computadores <br>
+                </p>
+
+            </div>
+            </div>
+
+
+            <div class="notebooks">
+                <div class="card">
+                    <img src="images/tv.jpg" width="150" height="130" alt="">
+
+                    <p>Televisores<br>
+
+                    </p>
+
                 </div>
             </div>
 
             <div class="card">
-                <div class="card-image">
-                    <img src="images/exemplo.jpg" alt="">
-                </div>
-                <div class="card-title">
-                    <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
-                </div>
-                <div class="card-price">
-                    <strong>R$ 360,00 </strong> <s>R$550,00</s>
-                </div>
-                <div class="card-conditions">
-                    <p>à vista ou em até 12x de R$ 31,62 sem juros </p>
-                </div>
+                <img src="images/microfone.jpg" width="150" height="130" alt="">
+
+                <p> Acessórios <br>
+                </p>
+
+            </div>
             </div>
 
             <div class="card">
-                <div class="card-image">
-                    <img src="images/exemplo.jpg" alt="">
-                </div>
-                <div class="card-title">
-                    <p>Fire TV Stick com Controle Remoto por Voz com Alexa</p>
-                </div>
-                <div class="card-price">
-                    <strong>R$ 360,00 </strong> <s>R$550,00</s>
-                </div>
-                <div class="card-conditions">
-                    <p>à vista ou em até 12x de R$ 31,62 sem juros </p>
-                </div>
+                <img src="images/CADEIRAS.png" width="150" height="130" alt="">
+
+                <p> Cadeiras Gamer <br>
+                </p>
+
+            </div>
+            </div>
+
+            <div class="card">
+                <img src="images/CONECTIVIDADE.png" width="150" height="130" alt="">
+
+                <p> Conectividades <br>
+                </p>
+
+            </div>
+            </div>
+
+            <div class="card">
+                <img src="images/COMPUTADORES.png" width="150" height="130" alt="">
+
+                <p> Computadores <br>
+                </p>
+
+            </div>
             </div>
 
         </section>
 
     </main>
-</body>
+    </body>
 
-</html>
+    </html>
