--- a/views/home/produtos.ejs
+++ b/views/home/produtos.ejs
@@ -1,4 +1,4 @@
-    <link rel="stylesheet" href="css/produtos.css">
+    <link rel="stylesheet" href="/css/produtos.css">
     <title>Produtos</title>
     <%- include('../partials/header') %>
     <main>
