adicionando paginas de cadastro, edição e exclusão de produto

--- a/public/css/cadastro.css
+++ b/public/css/cadastro.css
@@ -82,7 +82,7 @@ button:hover{
     text-align: center;
     
 }
-.submit-button:hover {
+a:nth-child(odd)::hover {
     background-color: #00AC33;
 }
    
