--- a/views/usuario/painelUsuario.ejs
+++ b/views/usuario/painelUsuario.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/painelUsuario.css">
+<link rel="stylesheet" href="/css/painelUsuario.css">
 
 <title>Bem vindo, Usuário</title>
 <%- include('../partials/headerLogado') %> 
