--- a/public/css/headerLogado.css
+++ b/public/css/headerLogado.css
@@ -8,6 +8,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Teko', sans-serif;
 }
 
 header {
@@ -125,7 +126,6 @@ header {
 }
 
 nav {
-  /* background: linear-gradient(90deg, rgba(36,36,36,1) 0%, rgba(0,175,239,1) 90%); */
   box-shadow: 0px 8px 10px grey;
   border: 1px solid whitesmoke;
   background-color: #f6fdff;
