--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/painelAdmin.css">
 <!-- <link rel="stylesheet" href="/css/header.css"> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" 
+  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> 
 <title>Painel do admin</title>
 
 <%- include('../partials/header') %>
