--- a/views/partials/headerLogado.ejs
+++ b/views/partials/headerLogado.ejs
@@ -5,15 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/headerLogado.css">
-    <link rel="shortcut icon" href="images/logo-header.svg" type="image/x-icon">
+    <link rel="stylesheet" href="/css/headerLogado.css">
+    <link rel="shortcut icon" href="/images/logo-header.svg" type="image/x-icon">
     <script src="https://kit.fontawesome.com/86e4e92605.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
         <div class="icon">
-            <a href="/" title="logo"><img src="images/logo.svg" alt=""></a>
+            <a href="/" title="logo"><img src="/images/logo.svg" alt=""></a>
         </div>
 
         <div class="search">
