--- a/public/css/painelAdmin.css
+++ b/public/css/painelAdmin.css
@@ -8,7 +8,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: #FFFFFF;
     font-family: 'Teko', sans-serif;
 }
 
@@ -16,9 +15,32 @@ body {
     background: linear-gradient(90deg, rgba(36,36,36,1) 0%, rgba(0,175,239,1) 90%);
 }
 
+.div-top {
+    background-color: #FFFFFF;
+    color: #000000;
+    border-radius: 8px;
+}
+
+.div-grafico {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    color: #000000;
+
+}
+
+th td {
+    height: 4.0rem;
+}
+
 .col {
     /* border: solid #FFFFFF 2px; */
     padding: 4.0rem;
+}
+
+.center-th {
+    text-align: center;
 }
 
 .botoes-adm {
@@ -30,6 +52,9 @@ body {
 .botoes-adm button {
     width: 20rem;
 
+    margin-left: 1.0rem;
+    border-radius: 8px;
+    
     color: #000000;
     font-size: 2.0rem;
 
@@ -40,6 +65,10 @@ body {
     margin-top: 3.0rem;
 }
 
+.container h2 {
+    margin-left: 1.0rem;
+}
+
 h1 {
     width: 0 auto;
     display: flex;
@@ -47,6 +76,18 @@ h1 {
     margin-top: 2.0rem;
 }
 
+.table {
+    background-color: #FFFFFF;
+}
+
 .div-table {
+    text-align: center;
     margin-top: 10rem;
+    color: #000000;
+}
+
+.btn-td {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
