--- a/views/adm/painelAdmin.ejs
+++ b/views/adm/painelAdmin.ejs
@@ -1,64 +1,86 @@
 <link rel="stylesheet" href="/css/painelAdmin.css">
 <!-- <link rel="stylesheet" href="/css/header.css"> -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" 
-<title>Painel do admin</title>
+  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous" <title>
+Painel do admin</title>
 
 <%- include('../partials/header') %>
 
-<main class="container">
-  <div class=".container div-top">
-    <h1>Ola, Fulano, seja Bem-vindo!</h1>
-    <div class="row">
-      <div class="col botoes-adm">
-        <h2>O que gostaria de fazer?</h2>
-        <button>Adicionar Novo Produto</button>
-        <!-- <button>Editar Produto</button>
+  <main class="container">
+    <div class=".container div-top">
+      <h1>Ola, Fulano. Seja Bem-vindo!</h1>
+      <div class="row">
+        <div class="col botoes-adm">
+          <h2>O que gostaria de fazer?</h2>
+          <button>Adicionar Novo Produto</button>
+          <!-- <button>Editar Produto</button>
                 <button>Remover Produto</button> -->
-      </div>
-      <div class="col">
-        <h1>Grafico pizza</h1>
-        <img src="/images/grafico-pizza.png" alt="" width="200rem" height="200rem">
-      </div>
-      <div class="col">
-        <h1>Produtos mais vendidos</h1>
-        <img src="/images/grafico-barra.png" alt="" width="200rem" height="200rem">
+        </div>
+        <div class="col div-grafico">
+          <h1>Grafico pizza</h1>
+          <img src="/images/grafico-pizza.png" alt="" width="200rem" height="200rem">
+        </div>
+        <div class="col div-grafico">
+          <h1>Produtos mais vendidos</h1>
+          <img src="/images/grafico-barra.png" alt="" width="200rem" height="200rem">
+        </div>
       </div>
     </div>
-  </div>
-  <div class="container div-table">
-    <table class="table table table-dark table-striped table table-hover table-border" width="96%" cellspacing="10">
-      <thead>
-        <tr>
-          <th class="col">Número</th>
-          <th class="col">Data</th>
-          <th class="col">Pagamento</th>
-          <th class="col">Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th>748596</th>
-          <td>10/11/2021</td>
-          <td>Cartão de Crédito</td>
-          <td>Entregue</td>
-        </tr>
-        <tr>
-          <th>742968</th>
-          <td>25/02/2022</td>
-          <td>Boleto</td>
-          <td>Cancelado</td>
-        </tr>
-        <tr>
-          <th>743002</th>
-          <td>04/05/2022</td>
-          <td>Cartão de Crédito</td>
-          <td>Entregue</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</main>
-</body>
+    <div class="container div-table">
+      <table class="table table-hover" width="96%" cellspacing="10">
+        <thead>
+          <tr>
+            <th class="col">Número</th>
+            <th class="col">Data</th>
+            <th class="col">Pagamento</th>
+            <th class="col">Status</th>
+            <th class="col center-th">Opções</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>748596</th>
+            <td>10/11/2021</td>
+            <td>Cartão de Crédito</td>
+            <td>Entregue</td>
+            <td class="btn-td">
+              <a href="#" type="button" class="btn btn-primary btn-lg">Abrir</a>
+              <a href="#" type="button" class="btn btn-secondary btn-lg">Editar</a>
+              <form action="#?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-danger btn-lg">Excluir</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th>742968</th>
+            <td>25/02/2022</td>
+            <td>Boleto</td>
+            <td>Cancelado</td>
+            <td class="btn-td">
+              <a href="#" type="button" class="btn btn-primary btn-lg">Abrir</a>
+              <a href="#" type="button" class="btn btn-secondary btn-lg">Editar</a>
+              <form action="#?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-danger btn-lg">Excluir</button>
+              </form>
+            </td>
+          </tr>
+          <tr>
+            <th>743002</th>
+            <td>04/05/2022</td>
+            <td>Cartão de Crédito</td>
+            <td>Entregue</td>
+            <td class="btn-td">
+              <a href="#" type="button" class="btn btn-primary btn-lg">Abrir</a>
+              <a href="#" type="button" class="btn btn-secondary btn-lg">Editar</a>
+              <form action="#?_method=DELETE" method="POST">
+                <button type="submit" class="btn btn-danger btn-lg">Excluir</button>
+              </form>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </main>
+  </body>
 
-</html>
+  </html>
