--- a/views/usuario/esqueciMinhaSenha.ejs
+++ b/views/usuario/esqueciMinhaSenha.ejs
@@ -10,20 +10,20 @@
 <body>
     <main>
         <div class="container">
-            <h1>Login</h1>
+            <h1>Nova Senha</h1>
             <form action="#" method="post">
-                <div class="wrapper">
+                <div class="wrapper wrapper-esqueci-senha">
                     <label for="senha" placeholder="Nova senha">Nova senha</i></label>
                     <input type="password" name="senha" id="">
                 </div>
 
-                <div class="wrapper">
+                <div class="wrapper wrapper-esqueci-senha">
                     <label for="senha">Repitir senha</label>
                     <input type="password" name="senha" id="">
                 </div>
 
             </form>
-            <button class="createAcount" id="createAcount">Salvar<i class="fa-solid fa-plus"></i></button>
+            <button class="createAcount salvar" id="createAcount">Salvar</button>
         </div>
 
     </main>
