--- a/views/home/categorias.ejs
+++ b/views/home/categorias.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/categorias.css">
+<link rel="stylesheet" href="/css/categorias.css">
 <title>Categorias</title>
 <%- include('../partials/header') %>
     <main>
