--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/stylehome.css">
+<link rel="stylesheet" href="/css/stylehome.css">
 <title>Muambas.net</title>
 <%- include('../partials/header') %> 
 
