--- a/views/home/cadastro.ejs
+++ b/views/home/cadastro.ejs
@@ -1,6 +1,5 @@
-
     <link rel="stylesheet" href="css/cadastro.css">
-   
+    <link rel="shortcut icon" href="/images/logo-header.svg" type="image/x-icon">
     <title>Cadastro</title>
    
 
