--- a/views/home/lista.ejs
+++ b/views/home/lista.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="css/lista.css">
+<link rel="stylesheet" href="/css/lista.css">
 <%- include('../partials/header') %>
   <main>
 
